--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-css-modules": "^4.7.11",
     "react-dom": "^15.6.2",
     "react-router-dom": "^4.0.0",
-    "reactstrap": "^8.1.1"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
